--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-web-browser": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
