--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-web": "0.17.7",
-    "expo-web-browser": "~10.2.1"
+    "expo-web-browser": "~10.2.1",
+    "expo-updates": "~0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
